add import logging and cfnresponse

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -115,6 +115,8 @@ Resources:
           import json
           import boto3
           import requests
+          import logging
+          import cfnresponse
           def handler(event, context):
             response = {
               'Status': 'SUCCESS',
