--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -4,6 +4,11 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: EKSWSV1
 
 Parameters:
+  DefaultUserSettings:
+    Description: "The default user settings for the SageMaker domain."
+    Type: JSON
+    Default: '{"ExecutionRole":"arn:aws:iam::123456789012:role/SageMakerExecutionRole","SecurityGroups":["sg-12345678"],"SubnetIds":["subnet-12345678","subnet-87654321"]}'
+
   VPCID:
     Description: "VPC ID where your resources will be deployed"
     Type: "AWS::EC2::VPC::Id"
