modify DefaultUserSetting Default value

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -7,7 +7,7 @@ Parameters:
   DefaultUserSettings:
     Description: "The default user settings for the SageMaker domain."
     Type: JSON
-    Default: '{"ExecutionRole":"arn:aws:iam::123456789012:role/SageMakerExecutionRole","SecurityGroups":["sg-12345678"],"SubnetIds":["subnet-12345678","subnet-87654321"]}'
+    Default: '{"ExecutionRole":"arn:aws:iam::455536822887:role/aws-service-role/sagemaker.amazonaws.com/AWSServiceRoleForAmazonSageMakerNotebooks","SecurityGroups":["sg-0282b2b4c457e9ec3"],"SubnetIds":["subnet-0682391657ce75068","subnet-00454d9f15a739905"]}'
 
   VPCID:
     Description: "VPC ID where your resources will be deployed"
