modify default_user_settings valeu -> json.loads()

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -171,6 +171,7 @@ Resources:
       CodeBuildServiceRoleArn: !GetAtt CodeBuildServiceRole.Arn
       VPC: !Ref VPCID
       SubnetIds: !Join [",", !Ref SubnetIds]
+      DefaultUserSettings: !Ref DefaultUserSettings
       DomainName: !Ref DomainName
     DependsOn:
       - CustomResourceLambda
