--- a/backup.yml
+++ b/backup.yml
@@ -12,7 +12,7 @@ Parameters:
   DefaultUserSettings:
     Description: "The default user settings for the SageMaker domain."
     Type: String
-    Default: '{"ExecutionRole":"arn:aws:iam::455536822887:role/aws-service-role/sagemaker.amazonaws.com/AWSServiceRoleForAmazonSageMakerNotebooks","SecurityGroups":["sg-0282b2b4c457e9ec3"]}'
+    Default: '{"ExecutionRole":"arn:aws:iam::455536822887:role/aws-service-role/sagemaker.amazonaws.com/AWSServiceRoleForAmazonSageMakerNotebooks","SecurityGroups":["sg-0282b2b4c457e9ec3"],"SubnetIds":["subnet-0682391657ce75068","subnet-00454d9f15a739905"]}'
 
   VPCID:
     Description: "VPC ID where your resources will be deployed"
