key of KubectlResource VPC -> VPCID

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -169,7 +169,7 @@ Resources:
       ServiceToken: !GetAtt CustomResourceLambda.Arn
       KubectlRoleName: !Ref KubectlRoleName
       CodeBuildServiceRoleArn: !GetAtt CodeBuildServiceRole.Arn
-      VPC: !Ref VPCID
+      VPCID: !Ref VPCID
       SubnetIds: !Join [",", !Ref SubnetIds]
       DefaultUserSettings: !Ref DefaultUserSettings
       DomainName: !Ref DomainName
