--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -4,24 +4,6 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: EKSWSV1
 
 Parameters:
-  DomainName:
-    Type: String
-    Description: The name of the SageMaker Studio Domain.
-    Default: MySageMakerStudioDomain
-
-  DefaultUserSettings:
-    Description: "The default user settings for the SageMaker domain."
-    Type: String
-    Default: '{"ExecutionRole":"arn:aws:iam::455536822887:role/aws-service-role/sagemaker.amazonaws.com/AWSServiceRoleForAmazonSageMakerNotebooks","SecurityGroups":["sg-0282b2b4c457e9ec3"]}'
-
-  VPCID:
-    Description: "VPC ID where your resources will be deployed"
-    Type: "AWS::EC2::VPC::Id"
-
-  SubnetIds:
-    Description: "Subnets where your Lambda will be deployed"
-    Type: List<AWS::EC2::Subnet::Id>
-
   EksClusterName:
     Type: String
     Description: The name of the EKS cluster created
@@ -129,10 +111,54 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code:
-        S3Bucket: "myfsndstack-codepipelineartifactbucket-0py4zkryvtap"
-        S3Key: "Archive.zip"
+        ZipFile: |
+          import json
+          import boto3
+          import cfnresponse
+          from botocore.vendored import requests
+          def handler(event, context):
+            # This comment was added to force an update on this function's code
+            response = {
+              'Status': 'SUCCESS',
+              "Reason": "See the details in CloudWatch Log Stream: " + context.log_stream_name,
+              'PhysicalResourceId': context.log_stream_name,
+              'StackId': event['StackId'],
+              'RequestId': event['RequestId'],
+              'LogicalResourceId': event['LogicalResourceId'],
+              'Data': {"Message": "Resource creation successful!"},
+            }
 
-      Handler: domain_function.lambda_handler
+            cfnresponse.send(event, context, cfnresponse.SUCCESS, response, context.log_stream_name)
+
+            client = boto3.client('iam')
+            try:
+              if event['RequestType'] == 'Create':
+                kubectl_role_name = event['ResourceProperties']['KubectlRoleName']
+                build_role_arn = event['ResourceProperties']['CodeBuildServiceRoleArn']
+
+                assume = client.get_role(RoleName = kubectl_role_name)
+                assume_doc = assume['Role']['AssumeRolePolicyDocument']
+                roles = [ { 'Effect': 'Allow', 'Principal': { 'AWS': build_role_arn }, 'Action': 'sts:AssumeRole' } ]
+
+                for statement in assume_doc['Statement']:
+                  if 'AWS' in statement['Principal']:
+                    if statement['Principal']['AWS'].startswith('arn:aws:iam:'):
+                      roles.append(statement)
+
+                assume_doc['Statement'] = roles
+                update_response = client.update_assume_role_policy(RoleName = kubectl_role_name, PolicyDocument = json.dumps(assume_doc))
+            except Exception as e:
+              print(e)
+              response['Status'] = 'FAILED'
+              response["Reason"] = e
+              response['Data'] = {"Message": "Resource creation failed"}
+
+            response_body = json.dumps(response)
+            headers = {'content-type': '', "content-length": str(len(response_body)) }
+            put_response = requests.put(event['ResponseURL'], headers=headers, data=response_body)
+            return response
+
+      Handler: index.handler
       Role: !GetAtt CustomResourceLambdaExecutionRole.Arn
       Runtime: python3.12
       Timeout: 300
@@ -169,10 +195,6 @@ Resources:
       ServiceToken: !GetAtt CustomResourceLambda.Arn
       KubectlRoleName: !Ref KubectlRoleName
       CodeBuildServiceRoleArn: !GetAtt CodeBuildServiceRole.Arn
-      VPCID: !Ref VPCID
-      SubnetIds: !Join [",", !Ref SubnetIds]
-      DefaultUserSettings: !Ref DefaultUserSettings
-      DomainName: !Ref DomainName
     DependsOn:
       - CustomResourceLambda
       - CodeBuildServiceRole
